--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,12 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.4'
-	// id 'checkstyle'
+	id 'checkstyle'
+}
+
+checkstyle {
+	toolVersion '7.8.1'
+	configFile file("config/checkstyle/checkstyle.xml")
 }
 
 group = 'nl.tudelft.healthblocks'
@@ -50,6 +55,11 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+}
+
+checkstyle {
+	toolVersion "8.37"
+	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
 }
 
 tasks.named('test') {
