--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 # Database
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=heartblocks
+spring.datasource.url=jdbc:h2:file:./data/myDB
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=helthblocks
 spring.datasource.password=passwd
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+
 
 # Default username for the admin user
 admin.username=admin
