--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.2.2'
 	// H2 in-memory database for testing
 	implementation group: 'com.h2database', name: 'h2', version: '2.2.224'
+	// PostgreSQL database for production
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
 
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
