--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database
 spring.datasource.url=jdbc:h2:file:./data/myDB
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=helthblocks
+spring.datasource.username=healthblocks
 spring.datasource.password=passwd
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
@@ -11,11 +11,16 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Default username for the admin user
 admin.username=admin
-# Default ID for the admin user. It is highly recommended not to change it, in order to avoid conflicts
-admin.userid=-1
+# Default email for the admin user
+admin.email=admin@healthblocks.nl
 # Default password for the admin user (generated locally using KeePassXC password manager)
-# Feel free to change it, but make sure it is secure!
+# It is highly recommended to change it. Make sure it is secure!
 admin.password=Td6CifgNFWncsmxnCR9obzPJqbF1tWawRNbtvdDc
+# Other admin details
+admin.first-name=Admin
+admin.last-name=Admin
+admin.affiliation=HealthBlocks
+
 
 server.port=8088
 # Include server messages for failing a request
