--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ admin.last-name=Admin
 admin.affiliation=HealthBlocks
 
 
+# Server listening port
 server.port=8088
 # Include server messages for failing a request
 server.error.include-message=always
