--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 	// Jackson for JSON parsing
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.16.1'
 
+	// Email support
+	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.3'
+
 	// Chaincode
 	implementation 'org.hyperledger.fabric:fabric-gateway:1.4.0'
 	implementation 'io.grpc:grpc-netty-shaded:1.59.0'
