Dockerize backend application

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ checkstyle {
 }
 
 group = 'nl.tudelft.healthblocks'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 
 java {
 	sourceCompatibility = '21'
