--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=${SERVER_PORT:8088}
 server.error.include-message=never
 
 # DATABASE PROPERTIES
-spring.datasource.url=jdbc:postgresql://${DB_POSTGRES_HOST:localhost}:${DB_POSTGRES_PORT:5432}/${DB_POSTGRES_DBNAME:healthblocks}
+spring.datasource.url=jdbc:postgresql://${DB_POSTGRES_HOST:localhost}:${DB_POSTGRES_PORT:5432}/${DB_POSTGRES_DBNAME:medtechchain}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_POSTGRES_USERNAME:admin}
 spring.datasource.password=${DB_POSTGRES_PASSWORD:admin}
