--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	// developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -44,6 +42,7 @@ dependencies {
 	// PostgreSQL database for production
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
 
+	// JWT
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'
@@ -58,8 +57,13 @@ dependencies {
 	implementation 'org.hyperledger.fabric:fabric-gateway:1.4.0'
 	implementation 'io.grpc:grpc-netty-shaded:1.59.0'
 
+	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+	testImplementation 'org.mockito:mockito-core:5.11.0'
+	testImplementation 'org.assertj:assertj-core:3.25.3'  // The best testing framework
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
 tasks.named('test') {
