--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
 	// Chaincode
 	implementation 'org.hyperledger.fabric:fabric-gateway:1.4.0'
+	compileOnly 'io.grpc:grpc-api:1.59.0'
 	implementation 'io.grpc:grpc-netty-shaded:1.59.0'
 
 	// Testing
