Update everything and fix tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -22,3 +22,9 @@ server.port=0
 # This is needed here for JavaMailSender bean instantiation in tests
 # The actual test bean will be a mock (defined in TestConfig.java)
 spring.mail.host=localhost
+
+# Is needed to instantiate the correct bean, depending on whether it is main or test environment
+gateway.mock=true
+# These properties are needed for QueryController
+gateway.channel-name=testchannel
+gateway.chaincode-name=testchaincode
