--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,23 @@ spring.mail.password=${SMTP_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=${SMTP_AUTH:false}
 spring.mail.properties.mail.smtp.starttls.enable=${SMTP_TLS:false}
 spring.mail.properties.mail.smtp.starttls.required=${SMTP_TLS:false}
+
+# FABRIC GATEWAY PROPERTIES
+# Is needed to instantiate the correct bean, depending on whether it is main or test environment
+gateway.mock=false
+# ID of the Membership Service Provider (see https://hyperledger-fabric.readthedocs.io/en/latest/membership/membership.html)
+gateway.msp-id=${MSP_ID:Org1MSP}
+# Path to crypto materials.
+gateway.crypto-path=${CRYPTO_PATH:../../test-network/organizations/peerOrganizations/org1.example.com}
+# Path to user certificate.
+gateway.cert-dir-path=${CERT_DIR_PATH:users/User1@org1.example.com/msp/signcerts}
+# Path to user private key directory.
+gateway.key-dir-path=${KEY_DIR_PATH:users/User1@org1.example.com/msp/keystore}
+# Path to peer tls certificate.
+gateway.tls-cert-path=${TLS_CERT_PATH:peers/peer0.org1.example.com/tls/ca.crt}
+# Gateway peer end point.
+gateway.peer-endpoint=${PEER_ENDPOINT:localhost:7051}
+gateway.override-auth=${OVERRIDE_AUTH:peer0.org1.example.com}
+#--------------------------------------------------------------
+gateway.channel-name=${CHANNEL_NAME:mychannel}
+gateway.chaincode-name=${CHAINCODE_NAME:basic}
