Add Gradle caching to GitHub Actions

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           java-version: 21
           distribution: 'temurin'
+          cache: gradle
 
       - name: Build
         run: ./gradlew build -x checkstyleMain -x checkstyleTest -x test
