Fix channel bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,8 +49,9 @@ gateway.key-dir-path=${KEY_DIR_PATH:users/User1@medtechchain.nl/msp/keystore}
 # Path to peer tls certificate.
 gateway.tls-cert-path=${TLS_CERT_PATH:users/User1@medtechchain.nl/tls/ca.crt}
 # Gateway peer end point.
-gateway.peer-endpoint=${PEER_ENDPOINT:localhost:8052}
+gateway.peer-endpoint=${PEER_ENDPOINT:localhost:10051}
 gateway.override-auth=${OVERRIDE_AUTH:peer0.medtechchain.nl}
 #--------------------------------------------------------------
 gateway.channel-name=${CHANNEL_NAME:medtechchain}
 gateway.chaincode-name=${CHAINCODE_NAME:medtechchain}
+gateway.smart-contract-name=${SMART_CONTRACT_NAME:medtechchain}
