--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
         # For explanations, see https://tomgregory.com/gradle/build-gradle-projects-with-github-actions/
       - uses: gradle/wrapper-validation-action@v2
 
-        # Install Java 21
+        # Install Java 21, enable Gradle caching
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -33,11 +33,38 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
+        # Build the project, skipping checkstyle and tests
       - name: Build
         run: ./gradlew build --no-daemon -x checkstyleMain -x checkstyleTest -x test
 
+        # Run checkstyle on main and test
       - name: Run Checkstyle
         run: ./gradlew checkstyleMain checkstyleTest
 
+        # Run all the tests
       - name: Run Tests
         run: ./gradlew test
+
+        # Run coverage with JaCoCo
+      - name: Run Coverage
+        run: |
+          ./gradlew jacocoTestCoverageVerification
+          ./gradlew jacocoTestReport
+
+        # Add the coverage computed by JaCoCo to the PR
+      - name: Add coverage to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.6.1
+        with:
+          paths: ${{ github.workspace }}/**/build/reports/jacoco/**/index.html
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 40
+          min-coverage-changed-files: 60
+        if: github.event_name == 'pull_request'
+
+        # Create a JaCoCo Badge with the computed coverage (can be found on the workflow page)
+      - name: Generate JaCoCo Badge
+        uses: cicirello/jacoco-badge-generator@v2.11.0
+        with:
+          generate-branches-badge: true
+          jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
