--- a/dev-tools/docker-compose.yaml
+++ b/dev-tools/docker-compose.yaml
@@ -10,18 +10,18 @@ services:
       - demo
     command: postgres
     environment:
-      - POSTGRES_DB=medtechchain
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
+      POSTGRES_DB: medtechchain
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
     ports:
       - "5432:5432"
     networks:
-      - medtechchain-ums
+      - medtechchain
     volumes:
       - postgres_storage:/var/lib/postgresql/data
 
   pgadmin:
-    image: dpage/pgadmin4:8.3
+    image: dpage/pgadmin4:8.4
     container_name: medtechchain-pgadmin
     profiles:
       - deps
@@ -29,12 +29,12 @@ services:
       - demo
     restart: always
     environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@medtechchain.nl
-      - PGADMIN_DEFAULT_PASSWORD=admin
+      PGADMIN_DEFAULT_EMAIL: admin@medtechchain.nl
+      PGADMIN_DEFAULT_PASSWORD: admin
     ports:
       - "10000:80"
     networks:
-      - medtechchain-ums
+      - medtechchain
     volumes:
       - pgadmin_storage:/var/lib/pgadmin
 
@@ -46,48 +46,59 @@ services:
       - dev
     restart: always
     environment:
-      - ServerOptions__HostName=medtechchain.nl
+      ServerOptions__HostName: medtechchain.nl
     ports:
       - "11000:8080"
       - "25:25"
       - "143:143"
     networks:
-      - medtechchain-ums
+      - medtechchain
     volumes:
       - smtp4dev_storage:/smtp4dev
 
-  medtechchain-backend-ums-dev: &medtechchain-backend-ums-dev
+  medtechchain-backend-dev: &medtechchain-backend-dev
     image: ${BE_IMAGE_NAME}
-    container_name: medtechchain-backend-ums
+    container_name: medtechchain-backend
     depends_on:
       - postgres
     profiles:
       - dev
-    environment:
-      - DB_POSTGRES_HOST=postgres
-      - SMTP_SERVER_HOST=smtp4dev
+    environment: &medtechchain-backend-dev-env
+      DB_POSTGRES_HOST: postgres
+      SMTP_SERVER_HOST: smtp4dev
+      CRYPTO_PATH: /home/user
+      CERT_DIR_PATH: ./msp/signcerts
+      KEY_DIR_PATH: ./msp/keystore
+      TLS_CERT_PATH: ./tls/ca.crt
+      PEER_ENDPOINT: peer0.medtechchain.nl:7051
+      OVERRIDE_AUTH: peer0.medtechchain.nl
+      CHANNEL_NAME: medtechchain
+      CHAINCODE_NAME: medtechchain
+      SMART_CONTRACT_NAME: medtechchain
     ports:
       - "8088:8088"
     networks:
-      - medtechchain-ums
+      - medtechchain
+    volumes:
+      - ${LOCAL_USER_CRYPTO_PATH}:/home/user
 
-  medtechchain-backend-ums:
-    <<: *medtechchain-backend-ums-dev
-    container_name: medtechchain-backend-ums
+  medtechchain-backend:
+    <<: *medtechchain-backend-dev
     profiles:
       - demo
     environment:
-      - DB_POSTGRES_HOST=postgres
-      - SMTP_SERVER_HOST=smtp.gmail.com
-      - SMTP_SERVER_PORT=587
-      - SMTP_USER=noreply.healthblocks@gmail.com
-      - SMTP_PASSWORD=${SMTP_PASSWORD}
-      - SMTP_AUTH=true
-      - SMTP_TLS=true
+      <<: *medtechchain-backend-dev-env
+      SMTP_SERVER_HOST: smtp.gmail.com
+      SMTP_SERVER_PORT: 587
+      SMTP_USER: noreply.medtechchain@gmail.com
+      SMTP_PASSWORD: ${SMTP_PASSWORD}
+      SMTP_AUTH: "true"
+      SMTP_TLS: "true"
 
 networks:
-  medtechchain-ums:
-    name: medtechchain-ums
+  medtechchain:
+    external: true
+    name: medtechchain
 
 volumes:
   postgres_storage:
