--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,15 +41,15 @@ gateway.mock=false
 # ID of the Membership Service Provider (see https://hyperledger-fabric.readthedocs.io/en/latest/membership/membership.html)
 gateway.msp-id=${MSP_ID:MedTechChainPeerMSP}
 # Path to crypto materials.
-gateway.crypto-path=${CRYPTO_PATH:../dev-tools/fabric/.generated/crypto/peerOrganizations/medtechchain.nl}
+gateway.crypto-path=${CRYPTO_PATH:../dev-tools/fabric/.generated/crypto/peerOrganizations/medtechchain.nl/users/User1@medtechchain.nl}
 # Path to user certificate.
-gateway.cert-dir-path=${CERT_DIR_PATH:users/User1@medtechchain.nl/msp/signcerts}
+gateway.cert-dir-path=${CERT_DIR_PATH:msp/signcerts}
 # Path to user private key directory.
-gateway.key-dir-path=${KEY_DIR_PATH:users/User1@medtechchain.nl/msp/keystore}
+gateway.key-dir-path=${KEY_DIR_PATH:msp/keystore}
 # Path to peer tls certificate.
-gateway.tls-cert-path=${TLS_CERT_PATH:users/User1@medtechchain.nl/tls/ca.crt}
+gateway.tls-cert-path=${TLS_CERT_PATH:tls/ca.crt}
 # Gateway peer end point.
-gateway.peer-endpoint=${PEER_ENDPOINT:localhost:10051}
+gateway.peer-endpoint=${PEER_ENDPOINT:localhost:8051}
 gateway.override-auth=${OVERRIDE_AUTH:peer0.medtechchain.nl}
 #--------------------------------------------------------------
 gateway.channel-name=${CHANNEL_NAME:medtechchain}
