--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,13 @@ spring.mail.properties.mail.smtp.auth=${SMTP_AUTH:false}
 spring.mail.properties.mail.smtp.starttls.enable=${SMTP_TLS:false}
 spring.mail.properties.mail.smtp.starttls.required=${SMTP_TLS:false}
 
+# CORS PROPERTIES
+spring.graphql.cors.allowed-origins=http://localhost:3000
+spring.graphql.cors.allowed-headers=Authorization,Cache-Control,Content-Type
+spring.graphql.cors.exposed-headers=Authorization,Cache-Control,Content-Type
+spring.graphql.cors.allowed-methods=GET,HEAD,POST,PUT,DELETE,OPTIONS
+spring.graphql.cors.allow-credentials=true
+
 # FABRIC GATEWAY PROPERTIES
 # Is needed to instantiate the correct bean, depending on whether it is main or test environment
 gateway.mock=false
