--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 
 	// Email support
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.3'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.3'
 
 	// Chaincode
 	implementation 'org.hyperledger.fabric:fabric-gateway:1.4.0'
