--- a/build.gradle
+++ b/build.gradle
@@ -109,9 +109,14 @@ jacocoTestReport {
 	//  and has not been written by us.
 	// Furthermore, in order to test this class, everything has to be mocked and it is not possible to test this
 	//  class in a proper and meaningful way (especially without actually having to run the fabric infrastructure).
+	// We also exclude EmailService from the coverage, since with the current implementation it is impossible to test it
+	//  in a proper and meaningful way (while we can mock the JavaMailSender, we cannot really test whether the email
+	//  has been sent successfully; furthermore, the MimeMessagePreparator is created with a lambda which is never
+	//  called in the application, but is required to create the class (thus, it cannot be covered).
 	afterEvaluate {
 		classDirectories.setFrom(files(classDirectories.files.collect {
-			fileTree(dir: it, exclude: ['nl/tudelft/medtechchain/config/GatewayConfig.class'])
+			fileTree(dir: it, exclude: ['nl/tudelft/medtechchain/config/GatewayConfig.class',
+										'nl/tudelft/medtechchain/services/EmailService.class'])
 		}))
 	}
 
