Add JSON to Protobuf deserializer for queries

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,13 @@ spring.session.jdbc.initialize-schema=always
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
+# JSON PROPERTIES
+spring.jackson.deserialization.fail-on-ignored-properties=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-null-creator-properties=true
+spring.jackson.deserialization.fail-on-missing-creator-properties=true
+spring.jackson.mapper.accept-case-insensitive-enums=true
+
 # JWT PROPERTIES
 # JWT validity (in minutes)
 jwt.expiration-time=15
