--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 
 	// Jackson for JSON parsing
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.16.1'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
 	// Email support
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.3'
@@ -65,8 +67,10 @@ dependencies {
 	implementation 'io.grpc:grpc-netty-shaded:1.59.0'
 
 	// Profobuf
-	//implementation ':medtechchain.protos:0.0.1'
-	//testImplementation ':medtechchain.protos:0.0.1'
+	implementation "com.google.protobuf:protobuf-java:4.26.1"
+	implementation 'com.google.protobuf:protobuf-java-util:4.26.0'
+	implementation ':medtechchain.protos:0.0.1'
+
 
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
