--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,3 +73,4 @@ gateway.override-auth=${OVERRIDE_AUTH:peer0.medtechchain.nl}
 gateway.channel-name=${CHANNEL_NAME:medtechchain}
 gateway.chaincode-name=${CHAINCODE_NAME:medtechchain}
 gateway.smart-contract-name=${SMART_CONTRACT_NAME:medtechchain}
+gateway.query-smart-contract-name=${QUERY_SMART_CONTRACT:Query}
