--- a/build.gradle
+++ b/build.gradle
@@ -63,13 +63,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.3'
 
 	// Chaincode
-	implementation 'org.hyperledger.fabric:fabric-gateway:1.4.0'
+	implementation 'org.hyperledger.fabric:fabric-gateway:1.5.0'
 	compileOnly 'io.grpc:grpc-api:1.59.0'
 	implementation 'io.grpc:grpc-netty-shaded:1.59.0'
 
 	// Profobuf
-	implementation "com.google.protobuf:protobuf-java:4.26.1"
-	implementation 'com.google.protobuf:protobuf-java-util:4.26.1'
+	implementation 'com.google.protobuf:protobuf-java:3.25.3'
+	implementation 'com.google.protobuf:protobuf-java-util:3.25.3'
 	implementation ':medtechchain.protos:0.0.1'
 
 
