--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
 	// Email support
