--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,6 +37,14 @@ jwt.secret-key-string=${JWT_SECRET_KEY:QdBnxtH8HdbAjCtdf6cXx9ICzGRSIwvnvtCZTBk2C
 password.length=15
 password.encoder-strength=12
 
+# TLS PROPERTIES
+server.ssl.enabled=${HTTPS:true}
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=${SSL_KEY_STORE:keystore/keystore.p12}
+server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD:medtechchain}
+server.ssl.protocol=TLS
+server.ssl.enabled-protocols=TLSv1.3
+
 # EMAIL PROPERTIES
 spring.mail.host=${SMTP_SERVER_HOST:localhost}
 spring.mail.port=${SMTP_SERVER_PORT:25}
