Add Gateway mock option to main

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 # SERVER PROPERTIES
-# Server listening port
-server.port=${SERVER_PORT:8088}
+# Server listening port (HTTPS)
+server.port=${SERVER_PORT:8433}
 # Include server messages for failing a request
 server.error.include-message=never
+
+# TLS PROPERTIES
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=${SSL_KEY_STORE:keystore/keystore.p12}
+server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD:medtechchain}
+server.ssl.protocol=TLS
+server.ssl.enabled-protocols=TLSv1.3
 
 # DATABASE PROPERTIES
 spring.datasource.url=jdbc:postgresql://${DB_POSTGRES_HOST:localhost}:${DB_POSTGRES_PORT:5432}/${DB_POSTGRES_DBNAME:medtechchain}
@@ -37,14 +45,6 @@ jwt.secret-key-string=${JWT_SECRET_KEY:QdBnxtH8HdbAjCtdf6cXx9ICzGRSIwvnvtCZTBk2C
 password.length=15
 password.encoder-strength=12
 
-# TLS PROPERTIES
-server.ssl.enabled=${HTTPS:true}
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=${SSL_KEY_STORE:keystore/keystore.p12}
-server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD:medtechchain}
-server.ssl.protocol=TLS
-server.ssl.enabled-protocols=TLSv1.3
-
 # EMAIL PROPERTIES
 spring.mail.host=${SMTP_SERVER_HOST:localhost}
 spring.mail.port=${SMTP_SERVER_PORT:25}
@@ -57,13 +57,12 @@ spring.mail.properties.mail.smtp.starttls.required=${SMTP_TLS:false}
 # CORS PROPERTIES
 spring.graphql.cors.allowed-origins=http://localhost:3000
 spring.graphql.cors.allowed-headers=Authorization,Cache-Control,Content-Type
-spring.graphql.cors.exposed-headers=Authorization,Cache-Control,Content-Type
 spring.graphql.cors.allowed-methods=GET,HEAD,POST,PUT,DELETE,OPTIONS
 spring.graphql.cors.allow-credentials=true
 
 # FABRIC GATEWAY PROPERTIES
 # Is needed to instantiate the correct bean, depending on whether it is main or test environment
-gateway.mock=false
+gateway.mock=${MOCK_GATEWAY:false}
 # ID of the Membership Service Provider (see https://hyperledger-fabric.readthedocs.io/en/latest/membership/membership.html)
 gateway.msp-id=${MSP_ID:MedTechChainPeerMSP}
 # Path to crypto materials.
