--- a/build.gradle
+++ b/build.gradle
@@ -75,10 +75,10 @@ dependencies {
 
 
 	// Testing
+	implementation 'org.mockito:mockito-core:5.11.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
-	testImplementation 'org.mockito:mockito-core:5.11.0'
 	testImplementation 'org.assertj:assertj-core:3.25.3'  // The best testing framework
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
