Revert to HTTP 😔

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # SERVER PROPERTIES
 # Server listening port (HTTPS)
-server.port=${SERVER_PORT:8443}
+server.port=${SERVER_PORT:8088}
 # Include server messages for failing a request
 server.error.include-message=never
 
 # TLS PROPERTIES
-server.ssl.enabled=true
+server.ssl.enabled=${HTTPS_ENABLED:false}
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=${SSL_KEY_STORE:keystore/keystore.p12}
 server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD:medtechchain}
