--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,7 +66,7 @@ gateway.mock=${MOCK_GATEWAY:false}
 # ID of the Membership Service Provider (see https://hyperledger-fabric.readthedocs.io/en/latest/membership/membership.html)
 gateway.msp-id=${MSP_ID:MedTechChainPeerMSP}
 # Path to crypto materials.
-gateway.crypto-path=${CRYPTO_PATH:../tools/fabric/.generated/crypto/peerOrganizations/medtechchain.nl/users/User1@medtechchain.nl}
+gateway.crypto-path=${CRYPTO_PATH:./crypto/medtechchain.nl}
 # Path to user certificate.
 gateway.cert-dir-path=${CERT_DIR_PATH:msp/signcerts}
 # Path to user private key directory.
