Add configuration controller and query export

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,5 +79,8 @@ gateway.override-auth=${OVERRIDE_AUTH:peer0.medtechchain.nl}
 #--------------------------------------------------------------
 gateway.channel-name=${CHANNEL_NAME:medtechchain}
 gateway.chaincode-name=${CHAINCODE_NAME:medtechchain}
-gateway.smart-contract-name=${SMART_CONTRACT_NAME:devicemetadata}
-gateway.query-smart-contract-name=${QUERY_SMART_CONTRACT:Query}
+gateway.data-contract-name=${DEVICE_DATA_CONTRACT_NAME:devicedata}
+gateway.config-contract-name=${CONFIG_CONTRACT_NAME:config}
+gateway.query-transaction=${QUERY_TRANSACTION:Query}
+gateway.query-read-queries-transaction=${QUERY_READ_QUERIES_TRANSACTION:ReadQueries}
+
